<resources>

    <string name="english_letters_number">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>

    <string name="app_name">JinZaiZhiJianMerchant</string>
    <string name="bottom_order">订单</string>
    <string name="bottom_statistics">销售统计</string>
    <string name="bottom_my">我的</string>

    <string name="statistics_total_order">订单总数</string>
    <string name="statistics_total_amount">总金额</string>
    <string name="statistics_sales_record">销售记录</string>
    <string name="statistics_order_number">订单号</string>

    <string name="my_withdrawals">申请提现</string>
    <string name="my_version">版本号</string>
    <string name="my_clear_cache">清除缓存</string>
    <string name="my_login_out">退出登录</string>

    <string name="logistics_title">三方物流</string>
    <string name="logistics_msg">输入物流号</string>
    <string name="logistics_confirm_shipment">确认发货</string>

    <string name="order_detail_title">订单详情</string>
    <string name="order_detail_number">订单编号</string>
    <string name="order_detail_product">商品详情</string>
    <string name="order_detail_user">用户信息</string>
    <string name="order_detail_remarks">备注</string>
    <string name="order_detail_freight">运费</string>
    <string name="order_detail_money">金额</string>
    <string name="order_detail_comments">查看评论</string>

    <string name="login_title">登录</string>

    <string name="order_null">订单为空,点击刷新</string>


</resources>
