<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/ButtonTheme">

    <FrameLayout
        android:id="@+id/contentFrame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></FrameLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dip"
        android:background="@color/line" />
    <LinearLayout
        android:background="@color/bottomBarBackground"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_order"
            style="@style/BottomBar"
            android:drawableTop="@mipmap/merchant_order_no"
            android:text="@string/bottom_order"/>
        <TextView
            android:id="@+id/tv_statistics"
            style="@style/BottomBar"
            android:drawableTop="@mipmap/merchant_statistics_no"
            android:text="@string/bottom_statistics"/>
        <TextView
            android:id="@+id/tv_my"
            style="@style/BottomBar"
            android:drawableTop="@mipmap/merchant_head_no"
            android:text="@string/bottom_my"/>
    </LinearLayout>
</LinearLayout>