<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Toolbar.Style"
            android:layout_alignParentTop="true">

            <ImageView
                android:src="@mipmap/left"
                style="@style/Toolbar.leftView"/>

            <TextView
                android:id="@+id/tv_title"
                style="@style/Toolbar.CenterTv"
                android:text="@string/logistics_title" />
        </android.support.v7.widget.Toolbar>

        <include layout="@layout/line" />

        <android.support.v7.widget.AppCompatEditText
            android:hint="@string/logistics_msg"
            android:textColorHint="@color/fontColorGray"
            android:textSize="@dimen/content_text_size"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/edit_shape" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/mainBackground" />

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:drawableRight="@mipmap/selected_no"
            android:text="顺丰快递"
            android:textColor="@color/fontColorBlack"
            android:textSize="@dimen/content_text_size" />
        <include layout="@layout/line"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:background="@drawable/button_shape"
        android:text="@string/logistics_confirm_shipment"
        android:textColor="@color/fontColorWhile" />

</RelativeLayout>