<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
       style="@style/Toolbar.Style" >
        <TextView
            android:id="@+id/shop_name"
            android:textSize="@dimen/top_bar_simal_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="商家名称"/>
        <TextView
            android:id="@+id/tv_title"
            style="@style/Toolbar.CenterTv"
            android:text="@string/bottom_statistics"/>
        <ImageView
            android:id="@+id/calendar_iv"
            style="@style/Toolbar.rightView"
            android:src="@mipmap/calendar"
            />
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/blackBackground">

        <LinearLayout
            android:layout_margin="@dimen/statistcs_horizontal_margin"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/beginTimeTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                tools:text="2017/03/02"/>
            <ImageView
                android:layout_marginRight="2dp"
                android:layout_marginLeft="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/transformation"/>
            <TextView
                android:id="@+id/endTimeTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                tools:text="2017/03/10"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/statistcs_horizontal_margin"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true">
            <TextView
                android:id="@+id/orderCountTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/bottomTextSelected"
                android:textSize="16sp"
                android:layout_gravity="center"
                tools:text="5469"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/content_text_size"
                android:layout_gravity="center"
                android:text="@string/statistics_total_order"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/statistcs_horizontal_margin"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true">

            <TextView
                android:id="@+id/orderAmountTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/bottomTextSelected"
                android:textSize="16sp"
                android:layout_gravity="center"
                tools:text="￥2260.00"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/content_text_size"
                android:layout_gravity="center"
                android:text="@string/statistics_total_amount"/>
        </LinearLayout>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/statistics_sales_record"
        android:paddingLeft="10dp"
        android:gravity="center_vertical"/>
    <include layout="@layout/line"/>
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/nullLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/order_null"
                android:visibility="gone"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/ordersRv"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </android.support.v7.widget.RecyclerView>
        </FrameLayout>

    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>