<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar.Style" >
        <TextView
            android:id="@+id/shop_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="@dimen/top_bar_simal_text"
            android:text="商家名称"/>
        <TextView
            android:id="@+id/tv_title"
           style="@style/Toolbar.CenterTv"
            android:text="@string/bottom_my" />
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:padding="25dp"
                android:background="@color/blackBackground">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentTop="true"
                    android:src="@mipmap/ic_launcher"
                    app:civ_border_width="2dp"
                    app:civ_border_color="#FF000000"/>
                <TextView
                    android:id="@+id/shopNameTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="商家名称"
                    android:textSize="@dimen/content_text_size"
                    android:layout_alignParentBottom="true"
                    android:gravity="center_horizontal"
                    android:textColor="@color/colorPrimary"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/withdrawals_tv"
                android:textColor="@color/fontColorBlack"
                android:layout_width="match_parent"
                android:layout_height="@dimen/my_text_view_hegin"
                android:drawableLeft="@mipmap/merchant_withdrawals"
                android:drawablePadding="10dp"
                android:drawableRight="@mipmap/left_jump"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/my_withdrawals"
                android:textSize="@dimen/content_text_size"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/my_text_view_hegin"
                android:orientation="horizontal">

                <TextView
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/fontColorGray"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:text="v1.21"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/mainBackground"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/my_text_view_hegin"
                    android:drawableLeft="@mipmap/merchant_edition"
                    android:textColor="@color/fontColorBlack"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:text="@string/my_version"
                    android:textSize="@dimen/content_text_size"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/textView2" />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/mainBackground"/>
            <LinearLayout
                android:id="@+id/clear_cache_ll"
                android:layout_width="match_parent"
                android:layout_height="@dimen/my_text_view_hegin"

                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:textColor="@color/fontColorBlack"
                    android:layout_height="@dimen/my_text_view_hegin"
                    android:drawableLeft="@mipmap/merchant_clear"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:text="@string/my_clear_cache"
                    android:textSize="@dimen/content_text_size"/>
                <TextView
                    android:layout_weight="1"
                    android:gravity="right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/fontColorGray"
                    android:text="50.3M"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:src="@mipmap/left_jump"
                    android:layout_gravity="center_vertical"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/mainBackground"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"/>
            <Button
                android:id="@+id/loginOutBt"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_shape"
                android:textColor="@color/colorPrimary"
                android:text="@string/my_login_out"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>