<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
+

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/order_detail_public" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary">
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_weight="3"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/fontColorGray"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_detail_freight"/>
                    <TextView
                        android:id="@+id/freightTv"
                        android:layout_marginLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/bottomTextSelected"
                        android:text="20.00"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/fontColorBlack"
                        android:textSize="@dimen/content_text_size_big"
                        android:text="@string/order_detail_money"/>
                    <TextView
                        android:paddingLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/bottomTextSelected"
                        android:text="￥"/>
                    <TextView
                        android:id="@+id/amountTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/content_text_size_big"
                        android:textColor="@color/bottomTextSelected"
                        android:text="90.00"/>
                </LinearLayout>
            </LinearLayout>
            <Button
                android:id="@+id/button"
                android:visibility="gone"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textColor="@color/fontColorWhile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_shape"
                android:text="@string/order_detail_comments"
                />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>